# Promising

./: .gitignore  README.md  pyproject.toml
promising/: __init__.py  configs.py  errors.py  obsolete_errors.py  obsolete_promises.py  promises.py  sentinels.py  typing.py  utils.py
tests/promises/: test_concurrent_future.py
