[tool.black]
line-length = 119

[tool.coverage.run]
branch = true
source = ["promising"]

[project]
name = "promising"
version = "0.0.1"
description = """TODO"""
authors = [{name = "Oleksandr Tereshchenko", email = "toporok@gmail.com"}]
homepage = "https://github.com/teremterem/Promising"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "hatch",
    "ipython",
    # "jupyterlab",
    # "notebook",  # This is needed for notebooks to work in PyCharm
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-dotenv",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
